Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97402

Qt6 Multimedia: Signals not fired on change of Audio Track

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2, 6.3.0 Alpha
    • 6.2.0
    • Multimedia
    • None
    • Android
    • d67d2d6ded1fd2613107649f70c2f2b9d37f7a7a (qt/qtmultimedia/dev) 10f7c93ba39bc53d4b888d47a250e2a6f57e368f (qt/qtmultimedia/6.2)
    • 2021wk42POAndroid&Mobile, 2021wk44POAndroid&Mobile

      Kit: Android Qt 6.2.0 Clang armeabi-v7a

      Video Sourcehttps://bhaart.s3.ap-south-1.amazonaws.com/sri_ramachandra_kripalu.mkv

      The above video has multiple audio tracks. To perform a proof of concept, I switched the audio track by setting the mediaPlayer.activeAudioTrack property. See code snippet below. 

      Window {
          ... 
      
          MediaPlayer { 
              id: mediaPlayer 
              ... 
          }
      
          VideoOutput { 
              id: videoOutput 
              anchors.fill: parent
      
              TapHandler { 
                  onSingleTapped: { mediaPlayer.activeAudioTrack = 2 } 
              } 
          }
      }

      Expected Result 1: The new audio track should start playing. This worked as expected. 

       

      Expected Result 2: There should be some signal that is fired when the MediaPlayer successfully switches to the new audio track. This did not work as expected. 

      I tried catching multiple signals but none of the below signals got fired:

      • onActiveAudioTrackChanged
      • onActiveTracksChanged
      • onTracksChanged
      • onAudioTracksChanged

       

      Questions:

      1. Can you please confirm this is a bug? 
      2.  Which signals are expected to get fired when we switch an audio track? 

        For Gerrit Dashboard: QTBUG-97402
        # Subject Branch Project Status CR V

            samuelmira Samuel Mira
            kmurthyhegde Krishna Hegde
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes