Fix missing active track change

Added emit to missing signal

Fixes: QTBUG-97402
Pick-to: 6.2
Change-Id: I1487b9d888aea8c3f994645d2441279d9e53f857
Reviewed-by: Lars Knoll <lars.knoll@qt.io>